--- a/.github/workflows/docsygen.yml
+++ b/.github/workflows/docsygen.yml
@@ -19,6 +19,7 @@ jobs:
         uses: divvun/actions/lang/install-deps@master
         with:
           sudo: true
+          apertium: true
       - name: Build giella-core/giella-shared
         uses: divvun/actions/lang/build@master
         with:
