--- a/.gut/delta.toml
+++ b/.gut/delta.toml
@@ -6,3 +6,4 @@ template_sha = "ed1d5195c9d61fedd6150cd217179e4cbbfe8e23"
 __UND2C__ = "quc"
 __UNDEFINED__ = "K'iche'"
 __UND__ = "quc"
+__REPO__ = "lang-quc-x-ext-apertium"
