Squashed 'src/fst/ext-Apertium-quc/' changes from 0f9d54f..2af3380
2af3380 Merge branch 'master' of github.com:apertium/apertium-quc
fbdea8b add weighting stuff
f553b77 setup apertium-regtest
7272302 replace 2019 with 02bc
f10ebfa fix anno
75fd820 add almg texts with permission
d575b6e got perms
ddf56b1 update udx file
23db69e Merge branch 'master' of github.com:apertium/apertium-quc
0566dff a lot of fixes based on SetSpaceAfterFromText
f7e3994 quit pretending we accept --with-x=path
13af137 improve hfst requirements
de0e974 fixes
ddff67e update udx
5b47caf update udx
8d487a0 some fixes
9a563cf typo
4d14701 fix bugs
48a4d0e fix a tonne of errors
7eaf1c7 fix
c3156d4 yesssssss 10002
a05f8c8 more wiki
b639cdc 9921
1295f7f 9.9k
da5b498 add wiki
8b35708 more utexas
86cfe94 ley
93c7803 more
65fa811 more cuentos
27ff35f more cuentso
1390fb6 more cuentos
77ae25b more
43a0afc fix more seg
e6a6ffd fix segmentations
fa21ce6 derp
adfdd3a cuentos
7650e76 more cuentos
39329a7 cuentos
2f83ef4 cuentos
a75d7d6 9k
dc907ee more
375cac5 more
62979ae more
1f72fa0 update gitignore
265ab06 gitignore
19da075 more
a345d0c 8k
a87757d words with b final
c8d6fcc more
5d7fd96 updates
c1addd8 another typo2
8ea2fba add sents from henderson (2012)
25fc9d0 status suffixes as aux
14b7f08 ind
07fd304 some fixes
3d16c6d 1100
0ba5ebc fixes
19fbd90 more
4014829 fixes
106a31a more
64d91d7 more
eadb3c8 more
677b8ac more
b594c17 6k
10626db more
dbd98b9 more words
f1f3ae4 more
3ca605d more
1180337 more
fab63f5 updates
1036a34 more
28e581a updates
5715eca 5k
bb49c7c +some
0ed6a4b 4k
c20257c +1
420db50 ley
ef66a53 5k seg
f2612aa +1
09bcf66 more
d9e6b97 +1
9cc5157 another parse
ecfbb01 more seg
b4870de more
aafb060 more
df0f290 more
a448b6d 30% = 3k
199c0ac more
b682979 +1
935b043 bibs
88f87b1 more
7e9cb56 more
b8a2b4f more
7a9c1be more
346ac4f more
07288ad more anno
fdc80a2 add all sentences from the cuentos
a0370bd more
d26554a more
1cf53d8 more cuentos
ffaa89e sentences from cuents
037ba1a more
9c4f805 more

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,39 @@ venv.bak/
 
 # hfst
 *.hfst
+*.hfstol
+*.att.gz
+*.bin
+
+configure
+*.in
+*.pc
+*.m4
+*.am
+
+.deps/
+INSTALL
+Makefile
+autom4te.cache/
+config.status
+install-sh
+missing
+modes/
+/*.zhfst
+/.DS_Store
+/INSTALL
+/Makefile
+/Makefile.in
+/ap_include.am
+/autom4te.cache
+/config.log
+/config.status
+/configure
+/install-sh
+/missing
+/modes
+/*.mode
+/*-*.prob
+/.deps
+/config.in
+/config
