--- a/src/fst/morphology/Makefile.am
+++ b/src/fst/morphology/Makefile.am
@@ -30,7 +30,7 @@ GT_LEXC_ROOT=$(srcdir)/ext-Apertium-$(GLANG)/apertium-$(GLANG).$(GLANG).lexc
 
 # Set this to the names of all regular lexc source files:
 GT_LEXC_SRCS_L1_L2=\
-			 affixes/symbols.lexc     \
+			 affixes/symbols.lexc
 
 # If you are building an error-detecting L2 analyser, specify the lexc files
 # that differ between the regular L1 and the L2 analysers below, in L1 and
