--- a/manifest.toml.in
+++ b/manifest.toml.in
@@ -1,6 +1,3 @@
-spellername = "@GLANGUAGE@"
-spellerversion = "@SPELLERVERSION@"
-
 # Name of the speller package in various languages.
 # The default is English + autonym:
 [speller.name]
@@ -19,3 +16,15 @@ system_pkg_id = "no.divvun.MacDivvun.quc-x-ext-apertium"
 [windows]
 system_product_code = "{792C5113-6607-4108-8768-F4AC6E134199}_is1"
 # extra_locales = { quc = "quc-x-ext-apertium" }
+
+[package.speller]
+name = "@GLANGUAGE@"
+version = "@SPELLERVERSION@"
+
+[package.grammar]
+name = "@GLANGUAGE@"
+version = "@GRAMCHECKVERSION@"
+
+[package.tts-text-proc]
+name = "@GLANGUAGE@"
+version = "@TTSTEXTPROCVERSION@"
